# risetv2

./: .gitignore  .gitmodules  AGENTS.md  CAER_S_CAERNet_Reproduction_ipynb.ipynb  README.md  audit_caernet_baseline.py  evaluate_caer_official.py  evaluate_test.py  prepare_content_disjoint_split.py  pyproject.toml  requirements.txt  research_audit.py  run_caer_clean.py  run_caer_final_multiseed.py  run_caer_official.py  run_caer_upstream_train.py  summarize_caer_multiseed.py  summarize_clean_final_multiseed.py  validate_clean_caer.py  verify_clean_validation.py
agents.d/: BASELINE_SCOPE.md  CURRENT_HANDOFF.md  EXPERIMENT_PROTOCOL.md  FIRST_TASK_FOR_CODEX.md  LITERATURE_AND_EXPERIMENT_PLAN.md  RESEARCH_PLAN.md
caer_research/: __init__.py  checkpointing.py  constants.py  data.py  devices.py  engine.py  metrics.py  trainer.py
configs/: caer_official.json  caernet.yaml  caers_data.yaml  glamor_net.yaml  yang_ccim.yaml  zhou_cross_attention.yaml
docs/: amd_rocm_migration.md
experiments/: registry.csv
paper/: LITERATURE_MATRIX.md  SOURCE_INVENTORY.md  references.bib
protocols/: caer_s_content_disjoint_v1.md
reports/: amd_rocm_migration_20260722.md  baseline_caernet_seed42.md  data_protocol_audit.md  experiment1_caernet_exploratory.md  experiment1_caernet_final_progress.md  experiment1_caernet_final_results.md  experiment1_clean_inrepo_exploratory_seed42.md  experiment1_clean_inrepo_final_results.md  experiment2_input_ablation_plan.md  phase1_clean_inrepo_refactor.md  phase2_clean_exploratory_setup.md  research_execution_roadmap.md
scripts/: bootstrap_rocm_env.sh  build_caers_manifest.py  check_accelerator.py  evaluate.py  evaluate_caers.py  (+5 more)
(+43 files in other folders)
