[project]
name = "caer-net-reproduction"
version = "0.1.0"
description = "CAER-Net reproduction notebook for CAER-S"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0,<3",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "gdown>=5.0.0",
    "jupyter>=1.0.0",
    "wandb>=0.16.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
